@@ -3,6 +3,7 @@ package com.service.backend.shared.service;
 import com.service.backend.shared.dto.BatchModerationResponse;
 import com.service.backend.shared.enums.ModerationTag;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
@@ -22,31 +23,53 @@ public class AITagService {
     private static final int MAX_ITEMS_PER_BATCH = 15;
     private final String availableTags;
 
+    @Value("${gemini.tagging.enabled:true}")
+    private boolean taggingEnabled;
+
     public AITagService(ModerationService moderationService) {
         this.moderationService = moderationService;
         this.availableTags = ModerationTag.getAllTagsAsString();
     }
 
     /**
-     * Tags a single piece of content.
+     * Tags a single piece of content using default Moderation tags.
      */
     public Mono<String> tagContent(String content) {
-        return tagContents(Collections.singletonList(content))
+        return tagContent(content, this.availableTags);
+    }
+
+    /**
+     * Tags a single piece of content with custom available tags.
+     */
+    public Mono<String> tagContent(String content, String availableTags) {
+        return tagContents(Collections.singletonList(content), availableTags)
                 .next()
                 .defaultIfEmpty(ModerationTag.NORMAL.name());
     }
 
     /**
-     * Tags a list of contents by dynamically batching them.
+     * Tags a list of contents by dynamically batching them, using default Moderation tags.
      */
     public Flux<String> tagContents(List<String> contents) {
+        return tagContents(contents, this.availableTags);
+    }
+
+    /**
+     * Tags a list of contents by dynamically batching them with custom available tags.
+     */
+    public Flux<String> tagContents(List<String> contents, String availableTags) {
         if (contents == null || contents.isEmpty()) {
             return Flux.empty();
         }
 
+        if (!taggingEnabled) {
+            return Flux.fromIterable(contents)
+                    .map(c -> ModerationTag.NORMAL.name());
+        }
+
         List<String> cleaned = contents.stream()
                 .map(c -> c == null ? "" : c.trim())
-                .collect(Collectors.toList());
+                .toList();
 
         List<List<String>> dynamicBatches = new ArrayList<>();
         List<String> currentBatch = new ArrayList<>();
@@ -71,12 +94,12 @@ public class AITagService {
         }
 
         return Flux.fromIterable(dynamicBatches)
-                .flatMapSequential(this::processBatch, 3) 
+                .flatMapSequential(batch -> processBatch(batch, availableTags), 3) 
                 .flatMapIterable(BatchModerationResponse::getTags);
     }
 
-    private Mono<BatchModerationResponse> processBatch(List<String> batch) {
-        return Mono.fromCallable(() -> moderationService.analyzeContents(batch, availableTags))
+    private Mono<BatchModerationResponse> processBatch(List<String> batch, String tags) {
+        return Mono.fromCallable(() -> moderationService.analyzeContents(batch, tags))
                 .subscribeOn(Schedulers.boundedElastic())
                 .onErrorResume(e -> {
                     log.error("AI Dynamic Batch Tagging failed. Items: {}. Error: {}", batch.size(), e.getMessage());
